fix: adjust vertical alignment during fetch of media aditional content

--- a/src/styles/videoosd.scss
+++ b/src/styles/videoosd.scss
@@ -174,6 +174,8 @@
 
 .osdMediaStatus {
     margin-left: auto;
+    display: flex;
+    align-items: center;
 }
 
 .osdMediaStatus .animate {
